@@ -1,3 +1,8 @@
+2010-05-13	Victor Mataré
+		* parser.c: Make int parsing cheaper.
+		* system.c: Remove duplicate set_fan.
+		* thinkfan.c: Reorder and try to fail early.
+
 2010-04-02	Victor Mataré
 		* config.c: Fix another memory leak
 		* NOTES, thinkfan.conf.sysfs, thinkfan.conf.thinkpad, README: some
